--- a/app/src/main/res/values-ht/strings.xml
+++ b/app/src/main/res/values-ht/strings.xml
@@ -1,2 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    // Onboarding
+    <string name="create_account">Create account</string>
+    <string name="get_support">Get support</string>
+    <string name="sign_in">Sign in</string>
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="onboarding_title_1">Your best financial luck!</string>
+    <string name="onboarding_title_2">The most inclusive cash advance app on the market.</string>
+    <string name="onboarding_title_3">Save hundreds of $ on BOTH bank overdraft fees &amp; remittance fees.</string>
+    <string name="onboarding_subtitle_1">Get up to $150* instantly!</string>
+    <string name="onboarding_content_1">*Eligibility rules apply\n\nRecipients of Social Security benefits as well as unearned incomes (alimony, child support etc.) may apply.</string>
+    <string name="onboarding_news_1">No tricks. No interest. No credit checks.\nNo SSN. No ITIN. No hidden or late fees.</string>
+    <string name="onboarding_news_2">The only cash advance app in three languages.\n(and more to come)</string>
+    <string name="work_in_progress">(work in progress)</string>
+</resources>
