Add validate code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    // Onboarding
+    <!--Onboarding -->
     <string name="create_account">Create account</string>
     <string name="get_support">Get support</string>
     <string name="sign_in">Sign in</string>
@@ -19,4 +19,15 @@
     <string name="first_sign_up_screen_message_one">You\'ll be alerted on your phone when your \nbank balance is running too low.</string>
     <string name="first_sign_up_screen_message_two">You\'ll be able to request a cash advance to \nkeep up with bills &amp; unexpected expenses.</string>
     <string name="first_sign_up_screen_message_three">Do you often send money to loved ones \noverseas? You could save hundreds of $ in \ntransfer fees (work in progress).</string>
+
+    <!--Validate Code -->
+    <string name="code_from_sms">Enter the code received via SMS</string>
+    <string name="code_from_email">Enter the code received via email</string>
+    <string name="invalid_code">Invalid code</string>
+    <string name="resend_code">Resend code</string>
+    <string name="resend_code_counter">Resend code in %d s</string>
+
+    <!--Generic -->
+    <string name="generic_continue">Continue</string>
+
 </resources>
