--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,10 @@
 
     <!--Generic -->
     <string name="generic_continue">Continue</string>
+    <string name="generic_seconds_abbreviation">sec</string>
+
+    <!--Dialog -->
+    <string name="bravo_text">Bravo!</string>
+    <string name="account_created_successfully">Your account has been\nsuccessfully created.</string>
 
 </resources>
