--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -46,6 +46,11 @@
     <string name="et_first_name">FIRST NAME*</string>
     <string name="et_last_name">LAST NAME*</string>
     <string name="et_street">STREET*</string>
+    <string name="zip_code_error">ZIP codes must be 5-digit numbers.</string>
+    <string name="email_error">Invalid email address.</string>
+    <string name="city_and_state_error">For city and state, enter only letters separated by a comma.</string>
+    <string name="street_error">Address should have at least 2 characters long.</string>
+    <string name="name_error">Enter only letters or special characters for your name.</string>
 
     <!--Generic -->
     <string name="generic_continue">Continue</string>
