--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -35,6 +35,16 @@
     <string name="resend_code">Resend code</string>
     <string name="resend_code_counter">Resend code in %d s</string>
 
+    <!--Choose password -->
+    <string name="finish_signing_up">Finish signing up</string>
+    <string name="choose_your_password">Choose your password</string>
+    <string name="password_label">PASSWORD*</string>
+    <string name="confirm_password_label">CONFIRM PASSWORD*</string>
+    <string name="password_length">Password must be at least 8 characters long.</string>
+    <string name="password_format">Password must contain at least one digit, one letter and one special character.</string>
+    <string name="password_not_match">Passwords don\'t match.</string>
+    <string name="terms_and_conditions">By checking this box you agree to our <annotation action="openTS">Terms of Service</annotation> and <annotation action="openPP">Privacy Policy</annotation>, as well as our partner <annotation action="openDTS">Dwolla\'s Terms of Service</annotation> and <annotation action="openDPP">Privacy Policy</annotation>.</string>
+
     <!--Generic -->
     <string name="generic_continue">Continue</string>
 </resources>
