--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,9 +61,18 @@
     <string name="street_error">Address should have at least 2 characters long.</string>
     <string name="name_error">Enter only letters or special characters for your name.</string>
 
+    <!--Forgot Password -->
+    <string name="forgot_password">Forgot password</string>
+    <string name="confirm_one_time_password">Confirm One Time Password</string>
+    <string name="reset_password">Reset your password</string>
+    <string name="forgot_password_screen_message">Please enter the email address you used \nto create your Cashli account.</string>
+    <string name="type_new_password">Type a new password</string>
+    <string name="confirm_one_time_password_message">Code has been sent to %s</string>
+
     <!--Generic -->
     <string name="generic_continue">Continue</string>
     <string name="generic_seconds_abbreviation">sec</string>
+    <string name="generic_confirm">Confirm</string>
 
     <!--Dialog -->
     <string name="bravo_text">Bravo!</string>
