--- a/app/src/main/res/values-ht/strings.xml
+++ b/app/src/main/res/values-ht/strings.xml
@@ -79,6 +79,7 @@
     <!--Generic -->
     <string name="generic_continue">Continue</string>
     <string name="generic_seconds_abbreviation">sec</string>
+    <string name="generic_field_can_not_be_empty">Field cannot be empty.</string>
 
     <!--Dialog -->
     <string name="bravo_text">Bravo!</string>
