--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,7 +78,7 @@
     <!--Generic -->
     <string name="generic_continue">Continue</string>
     <string name="generic_seconds_abbreviation">sec</string>
-    <string name="generic_field_can_not_be_empty">Field cannot be empty.</string>
+    <string name="no_messaging_app_found">No messaging app found.</string>
 
     <!--Dialog -->
     <string name="bravo_text">Bravo!</string>
