--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,7 @@
     <string name="generic_continue">Continue</string>
     <string name="generic_seconds_abbreviation">sec</string>
     <string name="no_messaging_app_found">No messaging app found.</string>
+    <string name="generic_error">Something went wrong, please try again.</string>
 
     <!--Dialog -->
     <string name="bravo_text">Bravo!</string>
