Finished forgot password flow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,9 +82,13 @@
     <string name="forgot_password">Forgot password</string>
     <string name="confirm_one_time_password">Confirm One Time Password</string>
     <string name="reset_password">Reset your password</string>
-    <string name="forgot_password_screen_message">Please enter the email address you used \nto create your Cashli account.</string>
+    <string name="forgot_password_screen_message_email">Please enter the email address you used \nto create your Cashli account.</string>
+    <string name="forgot_password_screen_message_phone">Please enter the phone number you used \nto create your Cashli account.</string>
     <string name="type_new_password">Type a new password</string>
     <string name="confirm_one_time_password_message">Code has been sent to %s</string>
+    <string name="wrong_email_error">There is no existing account with this email.</string>
+    <string name="wrong_phone_error">There is no existing account with this phone number.</string>
+    <string name="password_reset_success">Your password has been successfully reset.</string>
 
     <!--Generic -->
     <string name="generic_continue">Continue</string>
