--- a/app/src/main/res/values-ht/strings.xml
+++ b/app/src/main/res/values-ht/strings.xml
@@ -79,6 +79,10 @@
     <string name="last_name_length_error">Last name should be at least 2 characters long.</string>
     <string name="city_state_both_error">Please enter both the City and State separated by a comma.</string>
 
+    <!--Home screen-->
+    <string name="link_your_bank_account">Link your bank account</string>
+    <string name="request_a_cash_advance">Request a cash advance</string>
+
     <!--Link account informative -->
     <string name="link_my_bank_account">Link my bank account</string>
     <string name="link_my_bank_account_title">Link your bank account where paychecks are deposited into.</string>
