--- a/app/src/main/res/values-ht/strings.xml
+++ b/app/src/main/res/values-ht/strings.xml
@@ -105,6 +105,7 @@
     <string name="no_messaging_app_found">No messaging app found.</string>
     <string name="generic_error">Something went wrong, please try again.</string>
     <string name="generic_confirm">Confirm</string>
+    <string name="generic_session_expired">Session expired, please login again.</string>
 
     <!--Dialog -->
     <string name="bravo_text">Bravo!</string>
