--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -82,6 +82,9 @@
     <!--Home screen-->
     <string name="link_your_bank_account">Link your bank account</string>
     <string name="request_a_cash_advance">Request a cash advance</string>
+    <string name="link_account_message_one">In order to get cash advances,\n you must link your bank\n account to Cashli.</string>
+    <string name="cash_delivered_time">Cash could be delivered in minutes.</string>
+    <string name="up_to_150">Up to $150!</string>
 
     <!--Link account informative -->
     <string name="link_my_bank_account">Link my bank account</string>
@@ -121,5 +124,6 @@
 
     <!--More -->
     <string name="more">More</string>
+
 
 </resources>
