--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,6 +112,20 @@
     <string name="dollar_amount" translatable="false">$%d</string>
     <string name="dollar_amount_float" translatable="false">$%.2f</string>
 
+    <string name="claim_cash_due_date">Due date</string>
+    <string name="claim_cash_delivery_method_title">Pick a delivery method</string>
+
+    <string name="delivery_method_regular">Regular</string>
+    <string name="delivery_method_regular_description">1–3 working days</string>
+    <string name="delivery_method_regular_disclaimer">This advance will be deposited into your Bank Of America account ending in 3091. Same bank account will be used for repayment.</string>
+
+    <string name="delivery_method_express">Express</string>
+    <string name="delivery_method_express_description">Within minutes</string>
+    <string name="delivery_method_express_secondary_description">Leapfrogged</string>
+    <string name="delivery_method_express_disclaimer">The cash will de deposited into your bank account between 20 and 30 minutes.</string>
+
+    <string name="delivery_method_free">Free</string>
+
     <!--Generic -->
     <string name="generic_continue">Continue</string>
     <string name="generic_seconds_abbreviation">sec</string>
