--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -102,10 +102,10 @@
     <string name="transaction_history">Transaction history on your connected bank account</string>
     <string name="spending_habits">Spending habits around paydays</string>
     <string name="creation_date">Creation date of your bank account</string>
-    <string name="salary_toolbar">Salary text pending..</string>
-    <string name="transaction_history_toolbar">Transaction history on your connected bank account pending..</string>
-    <string name="spending_habits_toolbar">Spending habits around paydays pending..</string>
-    <string name="creation_date_toolbar">Creation date of your bank account pending..</string>
+    <string name="salary_tooltip">Salary text pending..</string>
+    <string name="transaction_history_tooltip">Transaction history on your connected bank account pending..</string>
+    <string name="spending_habits_tooltip">Spending habits around paydays pending..</string>
+    <string name="creation_date_tooltip">Creation date of your bank account pending..</string>
     <string name="ineligible_try_again">You may try again after your next paycheck.</string>
 
     <!--Forgot Password -->
