--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,7 +154,7 @@
     <string name="delivery_method_express_secondary_description">Leapfrogged</string>
     <string name="delivery_method_express_disclaimer">The cash will de deposited into your bank account between 20 and 30 minutes.</string>
 
-    <string name="delivery_method_free" tools:ignore="UnusedResource">Free</string>
+    <string name="delivery_method_free" tools:ignore="UnusedResources">Free</string>
 
     <!--Generic -->
     <string name="generic_continue">Continue</string>
