--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,11 @@
     <string name="scheduled_repayment_date">Scheduled repayment date: %s</string>
     <string name="bank_account_balance">Bank account balance</string>
     <string name="bank_account_check_date">As of %s</string>
+    <string name="bank_account_subtype_and_mask">%s - %s</string>
+    <string name="bank_account_subtype_checking">Checking</string>
+    <string name="bank_account_subtype_depository">Depository</string>
+    <string name="bank_account_subtype_savings">Savings</string>
+    <string name="bank_transactions">Latest bank transactions</string>
 
     <!--Link account informative -->
     <string name="link_my_bank_account">Link my bank account</string>
@@ -207,5 +212,11 @@
     <string name="log_out_message">Are you sure you want to log out?</string>
     <string name="yes_log_out">Yes, Log me out</string>
     <string name="cancel">Cancel</string>
+
+    <!--Plurals-->
+    <plurals name="past_days_plural">
+        <item quantity="one">%d day ago</item>
+        <item quantity="other">%d days ago</item>
+    </plurals>
 
 </resources>
