--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -183,6 +183,7 @@
     <string name="generic_seconds_abbreviation">sec</string>
     <string name="generic_confirm">Confirm</string>
     <string name="no_messaging_app_found">No messaging app found.</string>
+    <string name="no_mail_app_found">No mail app found.</string>
     <string name="generic_error">Something went wrong, please try again.</string>
     <string name="generic_session_expired">Session expired, please login again.</string>
     <string name="generic_see_more">See more</string>
