--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,6 +140,7 @@
     <!--Link Bank Account -->
     <string name="pending">Pending</string>
     <string name="pending_content">Your bank account will be connected soon.</string>
+    <string name="pending_time_content">Please wait for a few moments.</string>
     <string name="congrats">Congrats!</string>
     <string name="bank_account_connection_success">Connection to your bank account has been successful.\n\n<b>You are approved for $%s.</b></string>
     <string name="cash_out">Cash out</string>
