--- a/app/src/main/res/values-ht/strings.xml
+++ b/app/src/main/res/values-ht/strings.xml
@@ -84,7 +84,6 @@
     <string name="cash_delivered_time">Cash could be delivered in minutes.</string>
     <string name="up_to_sum">Up to $%s!</string>
     <string name="hello_user">Hi, %s!</string>
-    <string name="request_cash_ineligible">Unfortunately, you can\'t get a cash advance at this time.</string>
     <string name="request_cash_approved_for">You’ve been approved for</string>
     <string name="claim_cash_now">Claim cash now</string>
     <string name="request_cash_tips">Cash could be delivered in minutes.</string>
@@ -100,6 +99,8 @@
     <string name="bank_transactions">Latest bank transactions</string>
     <string name="back_to_top">Back to top</string>
     <string name="warning_lost_connection">We lost connection with your bank account. <annotation action="openResolveConnection">Resolve now</annotation></string>
+    <string name="unpause_your_membership">Unpause your membership</string>
+    <string name="can_not_get_cash_advance_see_more">Unfortunately, you can\'t get a cash advance at this time. <annotation action="openIneligibilityScreen">See more</annotation></string>
 
     <!--Link account informative -->
     <string name="link_my_bank_account">Link my bank account</string>
@@ -197,6 +198,7 @@
     <string name="save">Save</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="on_date">On %s</string>
 
     <!--Push Notifications -->
     <string name="notification_rejected_text">Without notification permission you will not receive alerts from “Cashli” app.</string>
