fix: Fix crash and change UI based on account status

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -213,6 +213,7 @@
     <string name="close_account">Close Account</string>
     <string name="close_account_instead">Close account instead</string>
     <string name="pause_account_instead">Pause account instead</string>
+    <string name="unpause_account_instead">Unpause account instead</string>
     <string name="pause_account_content">If you pause your account we will no longer be able to notify you about future cash advances eligibility.\n\nWe\'ll stop sending low balance alerts &amp; charging the membership fee.</string>
     <string name="close_account_ineligible">Sorry, you can\'t close your account at this time due to an outstanding payment.</string>
 
