--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -5,7 +5,7 @@
     <string name="get_support">Obtener Soporte</string>
     <string name="sign_in">Iniciar sesión</string>
     <string name="already_have_an_account">¿Ya tiene una cuenta?</string>
-    <string name="onboarding_title_1">¡Consiga hasta $150*!</string>
+    <string name="onboarding_title_1">¡Consiga hasta $150* ahora!</string>
     <string name="onboarding_title_2">La app de anticipos de efectivo más inclusiva del mercado.</string>
     <string name="onboarding_title_3">Ahorre cientos de $ en comisiones bancarias por sobregiro y envío de remesas.</string>
     <string name="onboarding_content_1">Pueden solicitarla los beneficiarios de Seguridad Social, así como de rentas no devengadas (pensión alimenticia, manutención de los hijos, etc.).\n\n*El dinero podría entregarse en 2 horas.\n*Se aplican normas de elegibilidad</string>
