--- a/app/src/main/res/values-ht/strings.xml
+++ b/app/src/main/res/values-ht/strings.xml
@@ -5,7 +5,7 @@
     <string name="get_support">Jwenn Sipò</string>
     <string name="sign_in">Konekte sou kont la</string>
     <string name="already_have_an_account">Ou genyen kont pa ou a deja?</string>
-    <string name="onboarding_title_1">Jwenn jiska $150*!</string>
+    <string name="onboarding_title_1">Jwenn jiska $150* kounye a!</string>
     <string name="onboarding_title_2">Aplikasyon avans lajan kach ki pi konplè sou mache a.</string>
     <string name="onboarding_title_3">Ekonomize plizyè santèn  $ sou alafwa frè bankè pou balans kont negatif ak frè pou transfè lajan aletranje.</string>
     <string name="onboarding_content_1">Benefisyè avantaj Sekirite Sosyal yo ansanm ak benefisyè revni moun fè san yo pa travay pou sa ( Pansyon alimantè, sipò finansye pou timoun, elatriye) ka aplike.\n\n*Lajan kach ka rive nan 2 èdtan.\n*Règ pou kalifikasyon yo aplikab</string>
