--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="get_support">Get support</string>
     <string name="sign_in">Sign in</string>
     <string name="already_have_an_account">Already have an account?</string>
-    <string name="onboarding_title_1">Get up to $150*!</string>
+    <string name="onboarding_title_1">Get up to $150* now!</string>
     <string name="onboarding_title_2">The most inclusive cash advance app on the market.</string>
     <string name="onboarding_title_3">Save hundreds of $ on BOTH bank overdraft fees &amp; remittance fees.</string>
     <string name="onboarding_content_1">Recipients of Social Security, SSI, other unearned income (child support, alimony etc.) may apply.\n\n*Cash could be delivered in 2 hours.\n*Eligibility rules apply</string>
